Show real installed apps list

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ LOG_FILE_PATH=logs/home-server.log
 LOG_TO_FILE=true
 NEXT_PUBLIC_LOG_LEVEL=info
 NEXT_PUBLIC_CLIENT_LOG_INGEST=true
+STORE_TEMPLATE_URL=https://raw.githubusercontent.com/bigbeartechworld/big-bear-portainer/main/templates.json
+STORE_CATALOG_TTL_MS=300000
+STORE_STACKS_ROOT=/DATA/Apps
+DOCKER_SOCKET_PATH=/var/run/docker.sock
