--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
         run: npm run lint
 
       - name: Unit tests
-        run: npm run test:unit
+        run: npm run test
 
       - name: Build
         run: NODE_ENV=production npm run build
