--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 80",
+    "start": "next start",
     "lint": "eslint .",
     "db:init": "node ./scripts/db-bootstrap.mjs",
     "test": "vitest run",
