--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ AUTH_PRIMARY_USERNAME=admin
 # Optional: set this to auto-seed principal user during `npm run db:init`
 # AUTH_PRIMARY_PASSWORD=change-me-strong
 AUTH_ALLOW_REGISTRATION=false
+AUTH_COOKIE_SECURE=false
 NEXT_PUBLIC_PRIMARY_USERNAME=admin
 LOG_LEVEL=info
 LOG_FILE_PATH=logs/home-server.log
