finish monitor module, terminal module

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ LOG_TO_FILE=true
 NEXT_PUBLIC_LOG_LEVEL=info
 NEXT_PUBLIC_CLIENT_LOG_INGEST=true
 STORE_TEMPLATE_URL=https://raw.githubusercontent.com/bigbeartechworld/big-bear-portainer/main/templates.json
-STORE_CATALOG_TTL_MS=300000
-STORE_STACKS_ROOT=/DATA/Apps
+STORE_CATALOG_TTL_MS=21600000  # 6 hours
+STORE_STACKS_ROOT=/var/lib/home-server/stacks  # Stack files (compose + env)
+STORE_APP_DATA_ROOT=/DATA/Apps  # App persistent data (volumes)
 DOCKER_SOCKET_PATH=/var/run/docker.sock
