--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "my-project",
-  "version": "0.1.22",
+  "version": "0.1.23",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "node server.mjs",
+    "build": "next build && npm run build:server-modules",
+    "build:server-modules": "tsc lib/server/modules/terminal/websocket-server.ts --outDir lib/server/modules/terminal --module esnext --moduleResolution bundler --target es2022 --skipLibCheck --esModuleInterop",
+    "start": "node server.mjs",
     "lint": "eslint .",
     "db:init": "node ./scripts/db-bootstrap.mjs",
     "test": "vitest run",
@@ -47,6 +48,7 @@
     "@radix-ui/react-toggle-group": "1.1.11",
     "@radix-ui/react-tooltip": "1.2.8",
     "@tanstack/react-query": "^5.66.11",
+    "@types/js-yaml": "^4.0.9",
     "@vercel/analytics": "1.6.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -56,9 +58,11 @@
     "dbus-next": "^0.10.2",
     "embla-carousel-react": "8.6.0",
     "input-otp": "1.4.2",
+    "js-yaml": "^4.1.1",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "node-pty": "^1.1.0",
     "openmeteo": "^1.2.3",
     "pg": "^8.14.1",
     "react": "19.2.4",
@@ -71,7 +75,10 @@
     "systeminformation": "^5.31.1",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "ws": "^8.18.0",
+    "ws": "^8.19.0",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
+    "xterm-addon-web-links": "^0.9.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -85,7 +92,7 @@
     "@types/pg": "^8.11.10",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
-    "@types/ws": "^8.5.13",
+    "@types/ws": "^8.18.1",
     "eslint": "^9.39.3",
     "eslint-config-next": "^16.1.6",
     "husky": "^9.1.7",
