--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "my-project",
-  "version": "0.1.30",
+  "version": "0.1.31",
   "private": true,
   "scripts": {
     "dev": "node server.mjs",
-    "build": "next build && npm run build:server-modules",
-    "build:server-modules": "tsc lib/server/modules/terminal/websocket-server.ts --outDir lib/server/modules/terminal --module esnext --moduleResolution bundler --target es2022 --skipLibCheck --esModuleInterop",
+    "build": "next build",
     "start": "node server.mjs",
     "lint": "eslint .",
-    "db:init": "node ./scripts/db-bootstrap.mjs",
     "test": "vitest run",
     "test:watch": "vitest",
-    "prepare": "husky"
+    "prepare": "husky",
+    "db:init": "drizzle-kit push",
+    "db:reset": "tsx ./scripts/db-reset.ts",
+    "db:migrate": "drizzle-kit migrate"
   },
   "lint-staged": {
     "*.{js, jsx,ts,tsx}": [
@@ -95,12 +96,14 @@
     "@types/react-dom": "19.2.3",
     "@types/ws": "^8.18.1",
     "drizzle-kit": "^0.31.9",
+    "drizzle-seed": "^0.3.1",
     "eslint": "^9.39.3",
     "eslint-config-next": "^16.1.6",
     "husky": "^9.1.7",
     "jsdom": "^28.1.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.2.0",
+    "tsx": "^4.21.0",
     "tw-animate-css": "1.3.3",
     "typescript": "5.7.3",
     "vitest": "^4.0.18"
