Fix path resolver import in network

--- a/.env.example
+++ b/.env.example
@@ -21,4 +21,6 @@ STORE_TEMPLATE_URL=https://raw.githubusercontent.com/bigbeartechworld/big-bear-p
 STORE_CATALOG_TTL_MS=21600000  # 6 hours
 STORE_STACKS_ROOT=/var/lib/home-server/stacks  # Stack files (compose + env)
 STORE_APP_DATA_ROOT=/DATA/Apps  # App persistent data (volumes)
+FILES_ROOT=/DATA  # Files app exposed root
+FILES_ALLOW_HIDDEN=false  # Allow hidden files toggle in Files app
 DOCKER_SOCKET_PATH=/var/run/docker.sock
